--- a/styles/cart.css
+++ b/styles/cart.css
@@ -126,7 +126,7 @@ header {
   
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
 }
 
@@ -146,7 +146,7 @@ header {
   width: 100px;
   height: 100px;
   margin-right: 3.5vw;
-  margin-left: 3.5vw;
+  margin-left: 2.5vw;
   border-radius: 50%;
 }
 
