--- a/styles/products.css
+++ b/styles/products.css
@@ -232,40 +232,30 @@ header{
   padding-bottom: 30px;
 }
 
-.dropbtn {
-  background-color: white;
-  color: var(--dark-gray);
-  padding: 15px;
-  font-size: 1.5rem;
-  display: flex; 
-  width: 100%;
-  height: 100%;
-  border: none;
+.dropdown {
+  position: relative;
+  width: 30%;
+  display: inline-block;
+  margin-bottom: 20px;
+  margin-left: 20%;
+}
+
+.dropdown select {
   border-radius: 10px;
-  cursor: pointer;
   box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
-#myInput {
-  font-size: 16px;
-  padding: 12px 2px 12px 12px;
-  border: none;
-  border-bottom: 1px solid #ddd;
-}
-
-#myInput:focus {outline: 3px solid #ddd;}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
+.dropdown select option {
+  background-color: var(--dark-cyan);
+  color: white;
 }
 
 .dropdown-content {
-  display: none;
   position: absolute;
   background-color: white;
   min-width: 230px;
   border: 1px solid #ddd;
+  border-radius: 10px;
   box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.25);
   z-index: 1;
 }
